...

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/signUpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_button" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
...
