...

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/showAllTrips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_all_trips"
                android:textSize="11sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/material_blue_grey_800"
            android:dividerHeight="1dp" />

    </LinearLayout>
...
