...

            <Space
                android:layout_width="20dp"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/createListingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_listing_label" />

        </LinearLayout>
    </LinearLayout>
...
